Java version change to 1.8