@@ -1,10 +1,11 @@
 package ru.vlapin.trainings.springluxoft;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-public sealed interface DirectMovieLister {
+public interface DirectMovieLister {
   List<Movie> moviesDirectedBy(String director);
 }
 
@@ -16,6 +17,7 @@ final class DirectMovieListerImpl implements DirectMovieLister {
   public List<Movie> moviesDirectedBy(String director) {
     return finder.findAll().stream()
                .filter(movie -> movie.getDirector().equals(director))
-               .toList();
+               .collect(Collectors.toList());
+//               .toList();
   }
 }
